# InfiniLM_fork

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml
android/: Cargo.toml  README.md
android-app/: Cargo.toml  gemm_f16.d  tree.txt
android-app/assets/: test.txt
android-app/keystore/: release.keystore
android-app/src/: lib.rs
android/src/: channels.rs  lib.rs
causal-lm/: Cargo.toml  build.rs  wrapper.h
causal-lm-c/c/: causal-lm.c
causal-lm/c/: causal-lm.h  export.h  xmake.lua
causal-lm/src/: decoding.rs  lib.rs  render.rs  tokenize.rs
chat-template/: Cargo.toml
chat-template/src/: lib.rs
common/: Cargo.toml
common/src/: gguf.rs  lib.rs
devices/ascend-card/: Cargo.toml  build.rs
devices/ascend-card/src/: lib.rs
devices/cambricon-mlu/: Cargo.toml
devices/cambricon-mlu/src/: lib.rs
devices/common/: Cargo.toml
devices/common-cpu/: Cargo.toml
devices/common-cpu/src/: gather.rs  lib.rs
devices/common/src/: lib.rs
devices/nvidia-gpu/: Cargo.toml  build.rs
devices/nvidia-gpu/src/: gather.rs  lib.rs  sample.rs
docs/user-guide/: doc.md
gguf/: Cargo.toml
gguf/src/: chat_template.rs  lib.rs  tokenizer.rs
models/llama/cambricon-mlu/src/: lib.rs  resource.rs
models/llama/common/: Cargo.toml
models/llama/common-cpu/: Cargo.toml
models/llama/common-cpu/src/: impls.rs  lib.rs  test.rs  test_dist.rs  test_infer.rs
models/llama/common/src/: args.rs  cast.rs  compute.rs  json.rs  lib.rs  load.rs  new.rs  random_sample.rs  save.rs  storage.rs
models/llama/nvidia-gpu/: Cargo.toml  build.rs
models/llama/nvidia-gpu-distributed/: Cargo.toml
models/llama/nvidia-gpu-distributed/src/: distribute.rs  lib.rs  parameters.rs
models/llama/nvidia-gpu/src/: lib.rs  resource.rs  test.rs  test_infer.rs
models/mixtral/common/: Cargo.toml
models/mixtral/common/src/: config.rs  params.rs
models/mixtral/cpu/: Cargo.toml
models/mixtral/cpu/src/: infer.rs  lib.rs
nvidia/common/src/: lib.rs  paged_attention.cuh  paged_attention.rs
nvidia/transformer/src/: lib.rs
service/: Cargo.toml
service/src/: lib.rs  session_manager.rs  tokenizer.rs
service/src/session/: cache.rs  dispatch.rs  mod.rs  task.rs
tensor/: Cargo.toml
tensor/src/: compatibility.rs  fmt.rs  lib.rs  reshape.rs  split.rs  tensor.rs
tensor/src/operators/: mod.rs  random_sample.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs
tokenizer/: Cargo.toml
tokenizer/src/: bpe.rs  lib.rs  new_bpe.rs  special.rs  vocab_txt.rs
web-api/: Cargo.toml  README.md
web-api/src/: manager.rs  schemas.rs
xtask/: Cargo.toml  build.rs
xtask/src/: cast.rs  chat.rs  list_turbo.rs  main.rs
