[workspace]
members = [
    "gguf",
    "tensor",
    "models/llama/common",
    "models/llama/common-cpu",
    "models/llama/nvidia-gpu",
    "test-utils",
]
resolver = "2"

[workspace.dependencies]
gguf.path = "gguf"
tensor.path = "tensor"
causal-lm.path = "causal-lm"
test-utils.path = "test-utils"

ggus = { git = "https://github.com/YdrMaster/gguf", rev = "c676bcc" }
ndarray-layout = { git = "https://github.com/YdrMaster/ndarray-layout", rev = "5c6b969" }
operators = { git = "https://github.com/YdrMaster/operators-rs", rev = "39ba50b", default-features = false }

build-script-cfg = "0.0"
search-cuda-tools = { git = "https://github.com/YdrMaster/cuda-driver", rev = "5a8d0c8" }
