[package]
name = "gguf"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

[dependencies]
ggus.workspace = true
memmap2.workspace = true
minijinja = { version = "2.3", default-features = false, features = ["loader"] }
serde = { version = "1.0", features = ["derive"] }
tokeneer = "0.0"

[dev-dependencies]
test-utils.workspace = true
