[package]
name = "common-acl"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }
common-devices = { path = "../common" }
tensor = { path = "../../tensor" }
operators = { workspace = true, features = ["ascend-card"] }

[build-dependencies]
build-script-cfg.workspace = true
search-ascend-tools.workspace = true
