[package]
name = "llama-cpu"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llama.path = "../common"
operators = { workspace = true, features = ["common-cpu"] }
memmap2.workspace = true
tensor.workspace = true
half = "2.4"

[dev-dependencies]
test-utils.workspace = true
gguf.workspace = true
