[package]
name = "llama"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gguf.workspace = true
operators.workspace = true
tensor.workspace = true
itertools = "0.13"
rand = "0.8"

[dev-dependencies]
test-utils.workspace = true
